package app;

import app.orders.BuilderPattern;

public class Main {

    public static void main(String[] args) {
        BuilderPattern.bPattern();
    }
}
