package app.goods;

import app.items.TShorts;

public class BlueShort extends TShorts {

    @Override
    public float price() {
        return 14.44f;
    }

    @Override
    public String name() {
        return "Blue T-Short";
    }
}
