package app.production;

public class ActiveSports implements IProduction {

    @Override
    public String pack() {
        return "Active Sports";
    }
}
