package app.production;

public interface IProduction {

    String pack();
}
