package app.production;

public class SmartCaps implements IProduction {

    @Override
    public String pack() {
        return "Smart Caps";
    }
}
